WC3 = WooCommerce 3+ (WordPress)

5.10.0-alpha1 (2020-05-11)
--------------------------
NOTE: The minimum PHP version requirement is now set to 5.6.

Features:
- Upgrade function to 5.10.0 checks strengthened Requirements.

Refactorings:
- Added some unit tests for basic classes in the Web namespace. As a consequence
  a lot of classes and methods were moved, renamed, or split:
- Introduced an interface Helpers/Severity, defining constants for severity and
  log levels, replacing similar constants from both Helpers/Log and Web/Result.
- Introduced a Helpers/Message class that wraps a Message (internal message, API
  message, exception, success message, debug message). Extracted (more or less)
  from Web/Result, used by Helpers/MessageCollection, Web/Result, and,
  Helpers/Form and everywhere messages are shown, logged or mailed.
- Introduced a Helpers/MessageCollection class that wraps a set of Message
  objects (see above). Extracted from Web/Result, used by Web/Result and,
  Helpers/Form.
- Many methods or parameters of methods in Web/Result were renamed or have
  (subtly) changed their (default) behavior.
- Requirements regarding required php extensions are completed in both
  Helpers/Requirements and composer.json.

5.9.1 (2020-04-23) (never released)
-----------------------------------
Bugs:
- MA|WC: Filling in some lacking error handling on the invoice status screen.
- WC: Ensure that the rate plugin on one of our own form pages do not treat form
  submission of the whole page as its own form submission (link expired error).

5.9.0 (2020-04-21)
------------------
NOTE: The minimum PHP version requirement is now set to 5.4.

NOTE: Magento 1 reaches end of life at june 2020. As of this version we will no
  longer maintain Magento 1 specific code, nor add features to Magento 1. You
  may continue to open (bug) tickets for Magento 1 and these will be addressed
  within the limits of a "reasonable" effort.

Features: